Bug 71333 - [PNV]igt/drv_hangman <3>[ 85.710189] [drm:i915_reset] *ERROR* Reset not implemented, but ignoring error for simulated gpu hangs
Summary: [PNV]igt/drv_hangman <3>[ 85.710189] [drm:i915_reset] *ERROR* Reset not imp...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 73639 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-07 06:41 UTC by lu hua
Modified: 2017-08-15 06:51 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (74.67 KB, text/plain)
2013-11-07 06:41 UTC, lu hua
no flags Details
tune reset warnings down a notch (1.29 KB, patch)
2013-11-07 08:42 UTC, Daniel Vetter
no flags Details | Splinter Review

Description lu hua 2013-11-07 06:41:13 UTC
Created attachment 88808 [details]
dmesg

System Environment:
--------------------------
Platform: Pineview
Kernel:  (drm-intel-fixes)f02586dfedf1dfae4f5ff7eb1990a2c4c56e1425

Bug detailed description:
-------------------------
It causes <3>[   85.710189] [drm:i915_reset] *ERROR* Reset not implemented, but ignoring error for simulated gpu hangs on pineview with -fixes, -queued and -nightly kernel.

output:
checking /sys/kernel/debug/dri/0/i915_error_state
rings stopped
gpu hang correctly detected
checking /sys/class/drm/card0/error
rings stopped
gpu hang correctly detected

Reproduce steps:
-------------------------
1. ./drv_hangman
Comment 1 Daniel Vetter 2013-11-07 08:40:19 UTC
We've only renamed ZZ_hangman to drv_hangman (see the mail I've sent to Guang), any reason why you report this exactly now?
Comment 2 Daniel Vetter 2013-11-07 08:42:53 UTC
Created attachment 88811 [details] [review]
tune reset warnings down a notch
Comment 3 lu hua 2013-11-11 05:28:44 UTC
(In reply to comment #2)
> Created attachment 88811 [details] [review] [review]
> tune reset warnings down a notch

Fixed by this patch.
Comment 4 Daniel Vetter 2013-11-11 19:15:54 UTC
commit f2d91a2c556479713abbefec237cad4bc1d54b0d
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Thu Nov 7 09:48:57 2013 +0100

    drm/i915: tune reset dmesg output a bit
Comment 5 lu hua 2013-11-15 02:10:35 UTC
Verified.Fixed.
Comment 6 Ben Widawsky 2014-01-24 23:10:03 UTC
*** Bug 73639 has been marked as a duplicate of this bug. ***
Comment 7 Jari Tahvanainen 2017-08-15 06:51:54 UTC
Closing old verified+fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.